[package]
name = "day_03"
authors = ["TheMasonX"]
description = "Advent of Code 2023 Day 03"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
derive-new = "0.6.0"
itertools = "0.12.0"
regex = "1.10.2"
smart-default = "0.7.1"
tmx_utils = "0.1.2"
