[package]
name = "day_04"
authors = ["TheMasonX"]
description = "Advent of Code 2023 Day 04"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
itertools = "0.12.0"
regex = "1.10.2"
tmx_utils = "0.1.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "card_game"
harness = false
