[package]
name = "day_05"
authors = ["TheMasonX"]
description = "Advent of Code 2023 Day 05"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
tmx_utils = "0.1.2"
derive-new = "0.6.0"
smart-default = "0.7.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"