[package]
name = "day_08"
authors = ["TheMasonX"]
description = "Advent of Code 2023 Day 08"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
tmx_utils = "0.1.2"
multizip = "0.1.0"
rayon = "1.5.3"
perf = "0.0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
