[package]
name = "day_10"
authors = ["TheMasonX"]
description = "Advent of Code 2023 Day 10"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
array2d = "0.3.2"
tmx_utils = "0.1.2"
derive-new = "0.6.0"
smart-default = "0.7.1"
nom = "7.1.1"